[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moveit-arm-dora-node"
version = "0.1.0"
description = "SPEC-VENDOR-NODE-V1 dora node wrapping dora-moveit2 (arm + Robotiq gripper)"
requires-python = ">=3.10"
dependencies = [
  "dora-rs>=0.2.1,<0.3",
  "pyarrow>=14",
  "httpx>=0.25",
]

[project.optional-dependencies]
# Runtime planning backend. Required to actually drive an arm (RealMoveItBridge),
# but NOT for unit tests (which use FakeMoveItBridge) or Mode C type imports — so
# it lives in an extra to keep the base install and CI light.
runtime = ["dora-moveit @ git+https://github.com/bobdingAI/dora-moveit2@master"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["moveit_arm_node*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
files = ["moveit_arm_node"]

[[tool.mypy.overrides]]
module = ["dora", "pyarrow", "dora_moveit.*", "dora_moveit2"]
ignore_missing_imports = true
